@@ -1392,6 +1392,14 @@ extern List priority_p_get_priority_factors_list(
 			if (_filter_job(job_ptr, req_job_list, req_user_list))
 				continue;
 
+			if ((slurmctld_conf.private_data & PRIVATE_DATA_JOBS)
+			    && (job_ptr->user_id != req_msg->uid)
+			    && !validate_operator(req_msg->uid)
+			    && !assoc_mgr_is_user_acct_coord(
+				    acct_db_conn, req_msg->uid,
+				    job_ptr->account))
+				continue;
+
 			obj = xmalloc(sizeof(priority_factors_object_t));
 			memcpy(obj, job_ptr->prio_factors,
 			       sizeof(priority_factors_object_t));
